BUG#31480: Incorrect result for nested subquery when executed via semi join - Variant #3 of the fix. It also  = Unifies code with table elimination's  = is able to handle FROM-subquery pullout.